# rag-pipeline-eval

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-all.txt  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/raw/: portfolio-overview.md  rag-conceptos.md
docs/: index.html  podcast-3-flujos-guion.md
eval/: run_eval.py
eval/datasets/: qa_golden.jsonl
eval/reports/: baseline-claude-judge-20260708T141039Z.csv  baseline-claude-judge-20260708T141039Z.json  baseline-ollama-20260708T130630Z.csv  baseline-ollama-20260708T130630Z.json
scripts/: check_judge.py  index.py
src/: config.py
src/api/: main.py
src/embeddings/: embedder.py
src/generation/: rag_chain.py
src/ingestion/: chunking.py  loaders.py
src/rag_pipeline_eval/: config.py  llm.py
src/rag_pipeline_eval/api/: main.py
src/rag_pipeline_eval/embeddings/: embedder.py
src/rag_pipeline_eval/generation/: rag_chain.py
src/rag_pipeline_eval/ingestion/: chunking.py
src/rag_pipeline_eval/retrieval/: retriever.py
src/rag_pipeline_eval/vectorstore/: store.py
src/retrieval/: retriever.py
src/vectorstore/: store.py
tests/: conftest.py  test_chunking.py  test_config.py
tests/api/: test_api.py
tests/generation/: test_rag_chain.py
tests/ingestion/: test_chunking.py
tests/vectorstore/: test_store.py
